--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@mantine/core": "^7.17.3",
     "@mantine/hooks": "^7.17.3",
     "@turf/turf": "^7.2.0",
+    "date-fns": "^4.1.0",
     "maplibre-gl": "^5.3.0",
     "maplibre-gl-indoorequal": "^1.3.0",
     "next": "15.2.4",
