chore: disable default image build

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,9 @@
 name: Deployment
 
 on:
-  push:
+#  push:
+#    branches:
+#      - main # TODO: Add specific image tag handling on main
   workflow_dispatch:
 
 permissions:
