--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -26,6 +26,10 @@ WORKDIR /app
 COPY --from=deps /app/node_modules ./node_modules
 COPY . .
 
+# Adds NEXT_PUBLIC_ vars
+ARG NEXT_PUBLIC_MAPTILER_API_KEY
+ARG NEXT_PUBLIC_INDOOR_CONTROL_API_KEY
+
 # Next.js collects completely anonymous telemetry data about general usage.
 # Learn more here: https://nextjs.org/telemetry
 # Uncomment the following line in case you want to disable telemetry during the build.
