--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -1,7 +1,10 @@
 name: Deployment Frontend
 
 on:
-  push:
+#  push:
+#    branches:
+#      - main # TODO: Add specific image tag handling on main
+  workflow_dispatch:
 
 permissions:
   packages: write
@@ -22,7 +25,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
           push: true
           tags: ghcr.io/duell10111/thr-roomfinder/frontend:${{ env.IMAGE_TAG }}
           context: frontend
