--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,5 +35,5 @@ jobs:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/gcp-deploy
         with:
-          service: "frontend"
-          image: "ghcr.io/duell10111/thr-roomfinder/backend:canary"
+          service: "backend"
+          image: "europe-west1-docker.pkg.dev/thrrosenheim/ghcr-mirror/duell10111/thr-roomfinder/backend:canary"
