--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,7 @@ jobs:
         working-directory: roomfinder-backend # Run in backend folder
   Deploy:
     runs-on: ubuntu-latest
+    needs: Build
     steps:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/gcp-deploy
