--- a/roomfinder-backend/src/main/resources/application-local.yml
+++ b/roomfinder-backend/src/main/resources/application-local.yml
@@ -8,4 +8,4 @@ spring:
     url: jdbc:postgresql://localhost:5432/roomFinderDB
     user: user
     password: password
-#    baseline-on-migrate: true
+    baseline-on-migrate: true
