--- a/roomfinder-backend/src/main/resources/application.yml
+++ b/roomfinder-backend/src/main/resources/application.yml
@@ -22,9 +22,11 @@ room-finder:
     over-pass-url: "https://overpass-api.de/api/interpreter"
     building-way-ids:
       # Hauptgebäude
-      - regex: "A\\d\\.\\d{0,2}"
+      - regex: "A\\d\\.\\d{0,2}\\w?"
         buildingId: 28400949 # Building A
-      - regex: "B\\d\\.\\d{0,2}"
-        buildingId: 28401106 # Building A
+        name: "A"
+      - regex: "B\\d\\.\\d{0,2}\\w?"
+        buildingId: 28401106 # Building B
+        name: "B"
   admin-ids:
     - test
