--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -13,24 +13,17 @@ permissions:
 
 concurrency: backend-dev
 
+env:
+  IMAGE_TAG: canary
+
 jobs:
   Build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-java@v4
+      - uses: ./.github/actions/build-backend
         with:
-          distribution: 'temurin'
-          java-version: '21'
-      - name: Publish image to Github
-        run: |
-          gradle jib \
-            --image=ghcr.io/duell10111/thr-roomfinder/backend:${{ env.IMAGE_TAG }} \
-            -Djib.to.auth.username=${{ github.actor }} \
-            -Djib.to.auth.password=${{ secrets.GITHUB_TOKEN }}
-        env:
-          IMAGE_TAG: canary
-        working-directory: roomfinder-backend # Run in backend folder
+          image_tag: ${{ env.IMAGE_TAG }}
   Deploy:
     runs-on: ubuntu-latest
     needs: Build
@@ -38,5 +31,5 @@ jobs:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/gcp-deploy
         with:
-          service: "backend"
-          image: "europe-west1-docker.pkg.dev/thrrosenheim/ghcr-mirror/duell10111/thr-roomfinder/backend:canary"
+          service: "backend-dev"
+          image: "europe-west4-docker.pkg.dev/thrrosenheim/ghcr-mirror/duell10111/thr-roomfinder/backend:${{ env.IMAGE_TAG }}"
