--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -13,34 +13,20 @@ permissions:
 
 concurrency: frontend-dev
 
+env:
+  IMAGE_TAG: canary
+
 jobs:
   Build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v3
+      - uses: ./.github/actions/build-frontend
         with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-      - name: Build and push
-        uses: docker/build-push-action@v6
-        with:
-          platforms: linux/amd64,linux/arm64
-          push: true
-          tags: ghcr.io/duell10111/thr-roomfinder/frontend:${{ env.IMAGE_TAG }}
-          context: frontend
-          build-args: |
-            NEXT_PUBLIC_MAPTILER_API_KEY=${{ secrets.MAPTILER_API_KEY }} 
-            NEXT_PUBLIC_INDOOR_CONTROL_API_KEY=${{ secrets.INDOOR_CONTROL_API_KEY }}
-            NEXT_PUBLIC_BACKEND_URL=https://api.thrroomfinder.duell10111.de
-        env:
-          IMAGE_TAG: canary
-          NEXT_PUBLIC_MAPTILER_API_KEY: ${{ secrets.MAPTILER_API_KEY }}
-          NEXT_PUBLIC_INDOOR_CONTROL_API_KEY: ${{ secrets.INDOOR_CONTROL_API_KEY }}
+          maptiler_api_key: ${{ secrets.MAPTILER_API_KEY }}
+          indoor_control_api_key: ${{ secrets.INDOOR_CONTROL_API_KEY }}
+          backend_url: 'https://api.thrroomfinder.duell10111.de'
+          image_tag: ${{ env.IMAGE_TAG }}
   Deploy:
     runs-on: ubuntu-latest
     needs: Build
@@ -48,5 +34,5 @@ jobs:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/gcp-deploy
         with:
-          service: "frontend"
-          image: "europe-west1-docker.pkg.dev/thrrosenheim/ghcr-mirror/duell10111/thr-roomfinder/frontend:canary"
+          service: "frontend-dev"
+          image: "europe-west4-docker.pkg.dev/thrrosenheim/ghcr-mirror/duell10111/thr-roomfinder/frontend:${{ env.IMAGE_TAG }}"
