ci: add frontend test folder and add frontend tests to analysis job

--- a/.github/workflows/analysis.yml
+++ b/.github/workflows/analysis.yml
@@ -17,8 +17,8 @@ jobs:
       - run: npm run lint
         name: "Lint check"
         working-directory: frontend # Run in frontend folder
-#      - run: npm run test
-#        working-directory: frontend # Run in frontend folder
+      - run: npm run test
+        working-directory: frontend # Run in frontend folder
   Backend-Analysis:
     name: Backend Analysis
     runs-on: ubuntu-latest
