--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -72,7 +72,7 @@ jobs:
             -Dsonar.projectKey=Duell10111_THRRoomFinder
             -Dsonar.organization=duell10111
             -Dsonar.sources=frontend/src,roomfinder-backend/src/main
-            -Dsonar.tests=roomfinder-backend/src/test
+            -Dsonar.tests=frontend/src/__tests__,roomfinder-backend/src/test
             -Dsonar.coverage.jacoco.xmlReportPaths=roomfinder-backend/build/reports/jacoco/test/jacocoTestReport.xml
             -Dsonar.javascript.lcov.reportPaths=frontend/coverage/lcov.info
             # optional. For more info about Code Coverage, please refer to https://docs.sonarcloud.io/enriching/test-coverage/overview/
