--- a/.github/workflows/analysis.yml
+++ b/.github/workflows/analysis.yml
@@ -17,8 +17,8 @@ jobs:
       - run: npm run lint
         name: "Lint check"
         working-directory: frontend # Run in frontend folder
-#      - run: npm run test
-#        working-directory: frontend # Run in frontend folder
+      - run: npm run test
+        working-directory: frontend # Run in frontend folder
   Backend-Analysis:
     name: Backend Analysis
     runs-on: ubuntu-latest
@@ -28,6 +28,10 @@ jobs:
         with:
           distribution: 'temurin' # See 'Supported distributions' for available options
           java-version: '21'
-      - run: gradle test
+      - name: "Unit Tests"
+        run: gradle test
+        working-directory: roomfinder-backend # Run in backend folder
+      - name: "Architecture Tests"
+        run: gradle konsistTest
         working-directory: roomfinder-backend # Run in backend folder
   # TODO: Add job to run bruno integration tests on dev or outsource in different workflow that runs after deployments?
