--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -27,6 +27,7 @@ jobs:
   Deploy:
     runs-on: ubuntu-latest
     needs: Build
+    environment: backend-dev
     steps:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/gcp-deploy
