--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -30,6 +30,7 @@ jobs:
   Deploy:
     runs-on: ubuntu-latest
     needs: Build
+    environment: frontend-dev
     steps:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/gcp-deploy
