--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
-    "test": "vitest --coverage"
+    "test": "vitest --coverage",
+    "cypress:open": "cypress open"
   },
   "dependencies": {
     "@mantine/core": "^7.17.3",
@@ -35,6 +36,7 @@
     "@types/react-dom": "^19",
     "@vitejs/plugin-react": "^4.4.1",
     "@vitest/coverage-v8": "^3.1.1",
+    "cypress": "^14.3.1",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
     "eslint-config-prettier": "^10.1.2",
