--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -25,6 +25,7 @@ jobs:
         with:
           maptiler_api_key: ${{ secrets.MAPTILER_API_KEY }}
           indoor_control_api_key: ${{ secrets.INDOOR_CONTROL_API_KEY }}
+          firebase_api_key: ${{ secrets.FIREBASE_API_KEY }}
           backend_url: 'https://api.thrroomfinder.duell10111.de'
           image_tag: ${{ env.IMAGE_TAG }}
   Deploy:
