--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,12 +12,14 @@
     "cypress:open": "cypress open"
   },
   "dependencies": {
-    "@mantine/core": "^7.17.3",
-    "@mantine/dates": "^7.17.4",
-    "@mantine/hooks": "^7.17.3",
+    "@mantine/core": "7.17.4",
+    "@mantine/dates": "7.17.4",
+    "@mantine/hooks": "7.17.4",
+    "@mantine/notifications": "7.17.4",
     "@turf/turf": "^7.2.0",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
+    "firebase": "^11.6.1",
     "lodash": "^4.17.21",
     "maplibre-gl": "^5.3.0",
     "maplibre-gl-indoorequal": "^1.3.0",
