--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,15 +8,19 @@
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
-    "test": "vitest --coverage"
+    "test": "vitest --coverage",
+    "cypress:open": "cypress open"
   },
   "dependencies": {
-    "@mantine/core": "^7.17.3",
-    "@mantine/dates": "^7.17.4",
-    "@mantine/hooks": "^7.17.3",
+    "@mantine/core": "7.17.4",
+    "@mantine/dates": "7.17.4",
+    "@mantine/hooks": "7.17.4",
+    "@mantine/notifications": "7.17.4",
+    "@tabler/icons-react": "^3.31.0",
     "@turf/turf": "^7.2.0",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
+    "firebase": "^11.6.1",
     "lodash": "^4.17.21",
     "maplibre-gl": "^5.3.0",
     "maplibre-gl-indoorequal": "^1.3.0",
@@ -35,6 +39,7 @@
     "@types/react-dom": "^19",
     "@vitejs/plugin-react": "^4.4.1",
     "@vitest/coverage-v8": "^3.1.1",
+    "cypress": "^14.3.1",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
     "eslint-config-prettier": "^10.1.2",
