ci: add permission for github token

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -9,6 +9,9 @@ on:
 
 # TODO: Adapt frontend image to allow runtime envs in the future
 
+permissions:
+  packages: write
+
 jobs:
 #  frontend-build:
 #    runs-on: ubuntu-latest
