--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -73,3 +73,9 @@ jobs:
           working-directory: frontend
           build: npm run build
           start: npm start
+      - name: Upload screenshots
+        uses: actions/upload-artifact@v4
+        if: failure()
+        with:
+          name: cypress-screenshots
+          path: frontend/cypress/screenshots
