chore: get logs from backend on failure

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -82,3 +82,6 @@ jobs:
         with:
           name: cypress-screenshots
           path: frontend/cypress/screenshots
+      - name: Backend Logs
+        run: docker logs "${{ job.services.backend.id }}"
+        if: failure()
