--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -36,19 +36,6 @@ jobs:
     needs:
       - backend-build
     services:
-#      fronted:
-#        # TODO: Use image with local backend api env variable
-#        image: ghcr.io/duell10111/thr-roomfinder/frontend:e2e
-#        ports:
-#          - 80:3000
-      backend:
-        image: ghcr.io/duell10111/thr-roomfinder/backend:e2e
-        ports:
-          - 8080:8080
-        env:
-          SPRING_PROFILES_ACTIVE: "local, no-auth"
-          SPRING_R2DBC_URL: r2dbc:postgresql://localhost:5432/roomFinderDB
-          SPRING_FLYWAY_URL: jdbc:postgresql://localhost:5432/roomFinderDB
       db:
         image: postgis/postgis:15-3.3-alpine
         ports:
@@ -57,6 +44,14 @@ jobs:
           POSTGRES_PASSWORD: password
           POSTGRES_USER: user
           POSTGRES_DB: roomFinderDB
+      backend:
+        image: ghcr.io/duell10111/thr-roomfinder/backend:e2e
+        ports:
+          - 8080:8080
+        env:
+          SPRING_PROFILES_ACTIVE: "local, no-auth"
+          SPRING_R2DBC_URL: r2dbc:postgresql://db:5432/roomFinderDB
+          SPRING_FLYWAY_URL: jdbc:postgresql://db:5432/roomFinderDB
     steps:
       - name: Checkout
         uses: actions/checkout@v4
