chore: mock @mapgrab/map-interface as workaround for broken main reference

--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -72,7 +72,7 @@ jobs:
             -Dsonar.projectKey=Duell10111_THRRoomFinder
             -Dsonar.organization=duell10111
             -Dsonar.sources=frontend/src,roomfinder-backend/src/main
-            -Dsonar.exclusions=frontend/src/__tests__/**
+            -Dsonar.exclusions=frontend/src/__tests__/**,frontend/src/__mocks__/**
             -Dsonar.tests=frontend/src/__tests__,roomfinder-backend/src/test,roomfinder-backend/src/konsistTest
             -Dsonar.coverage.jacoco.xmlReportPaths=roomfinder-backend/build/reports/jacoco/test/jacocoTestReport.xml
             -Dsonar.javascript.lcov.reportPaths=frontend/coverage/lcov.info
