--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,7 +32,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@mapgrab/cypress": "^0.0.2",
+    "@mapgrab/cypress": "0.0.2",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.3.0",
     "@types/lodash": "^4.17.16",
@@ -41,7 +41,7 @@
     "@types/react-dom": "^19",
     "@vitejs/plugin-react": "^4.4.1",
     "@vitest/coverage-v8": "^3.1.1",
-    "cypress": "^14.3.1",
+    "cypress": "^14.4.0",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
     "eslint-config-prettier": "^10.1.2",
