--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -1,13 +1,12 @@
 name: E2E Tests
 on:
   push:
+    branches:
+      - "main"
+  pull_request:
+    branches:
+      - "main"
   workflow_dispatch:
-#    inputs:
-#      tag:
-#        type: string
-#        description: "Image tag to run tests against"
-
-# TODO: Make adaptive to allow input tag used for backup or use built image?
 
 permissions:
   packages: write
@@ -19,7 +18,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/build-backend
         with:
-          image_tag: e2e
+          image_tag: ${{ github.sha }}
   cypress:
     runs-on: ubuntu-latest
     needs:
@@ -34,7 +33,7 @@ jobs:
           POSTGRES_USER: user
           POSTGRES_DB: roomFinderDB
       backend:
-        image: ghcr.io/duell10111/thr-roomfinder/backend:e2e
+        image: ghcr.io/duell10111/thr-roomfinder/backend:${{ github.sha }}
         ports:
           - 8080:8080
         env:
