--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@mantine/dates": "7.17.4",
     "@mantine/hooks": "7.17.4",
     "@mantine/notifications": "7.17.4",
+    "@mapgrab/map-interface": "1.0.1",
     "@tabler/icons-react": "^3.31.0",
     "@turf/turf": "^7.2.0",
     "date-fns": "^4.1.0",
@@ -31,6 +32,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@mapgrab/cypress": "0.0.2",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.3.0",
     "@types/lodash": "^4.17.16",
@@ -39,7 +41,7 @@
     "@types/react-dom": "^19",
     "@vitejs/plugin-react": "^4.4.1",
     "@vitest/coverage-v8": "^3.1.1",
-    "cypress": "^14.3.1",
+    "cypress": "^14.4.0",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
     "eslint-config-prettier": "^10.1.2",
