--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,6 +1,7 @@
 {
   "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json",
   "include-component-in-tag": false,
+  "separate-pull-requests": false,
   "packages": {
     "frontend": {
       "release-type": "node"
@@ -11,5 +12,31 @@
         "build.gradle.kts"
       ]
     }
-  }
+  },
+  "changelog-sections": [
+    {
+      "type": "chore",
+      "section": "📚 Chore",
+      "hidden": false
+    },
+    {
+      "type": "ci",
+      "section": "🚀 Continuous Integration",
+      "hidden": false
+    },
+    {
+      "type": "docs",
+      "section": "📄 Documentation",
+      "hidden": false
+    }
+  ],
+  "plugins": [
+    {
+      "type": "linked-versions",
+      "groupName": "thrr",
+      "components": [
+        "frontend", "roomfinder-backend"
+      ]
+    }
+  ]
 }
