--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -28,13 +28,13 @@ jobs:
           firebase_api_key: ${{ secrets.FIREBASE_API_KEY }}
           backend_url: 'https://api.thrroomfinder.duell10111.de'
           image_tag: ${{ env.IMAGE_TAG }}
-  Deploy:
-    runs-on: ubuntu-latest
-    needs: Build
-    environment: frontend-dev
-    steps:
-      - uses: actions/checkout@v4
-      - uses: ./.github/actions/gcp-deploy
-        with:
-          service: "frontend-dev"
-          image: "europe-west4-docker.pkg.dev/thrrosenheim/ghcr-mirror/duell10111/thr-roomfinder/frontend:${{ env.IMAGE_TAG }}"
+#  Deploy:
+#    runs-on: ubuntu-latest
+#    needs: Build
+#    environment: frontend-dev
+#    steps:
+#      - uses: actions/checkout@v4
+#      - uses: ./.github/actions/gcp-deploy
+#        with:
+#          service: "frontend-dev"
+#          image: "europe-west4-docker.pkg.dev/thrrosenheim/ghcr-mirror/duell10111/thr-roomfinder/frontend:${{ env.IMAGE_TAG }}"
