--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -14,7 +14,7 @@ permissions:
 concurrency: backend-dev
 
 env:
-  IMAGE_TAG: canary
+  IMAGE_TAG: ${{ github.ref == 'refs/heads/main' && 'latest' || 'canary' }}
 
 jobs:
   Build:
